src/main/java/org/example/loader/csv/CSV.g4
grammar CSV;
file: header row+
    ;

header: row;

row: field (',' field)* '\r'? '\n'
;


field: TEXT #text
    | STRING #string
    |   # empty
    ;

TEXT: ~[,\n\r"]+;

STRING: '"' ('""' | ~'"')* '"';
